--- a/quizz_1.ipynb
+++ b/quizz_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPdUpg0f5X158+kMWSlVuJR",
+      "authorship_tag": "ABX9TyPw0eRwbWpFAdyl/Dk+JoV/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +36,128 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x= float(input('score: '))\n",
+        "\n",
+        "if x>=100:\n",
+        "\n",
+        "  grade = 'A'\n",
+        "\n",
+        "elif x>=93 :\n",
+        "\n",
+        "  grade = 'A'\n",
+        "\n",
+        "elif x>=92:\n",
+        "\n",
+        "  grade = 'A-'\n",
+        "\n",
+        "elif x>=90:\n",
+        "\n",
+        "  grade = 'A-'\n",
+        "\n",
+        "elif x>=89:\n",
+        "\n",
+        "  grade = 'B+'\n",
+        "\n",
+        "elif x>=87:\n",
+        "\n",
+        "  grade = 'B+'\n",
+        "\n",
+        "elif x>=86:\n",
+        "\n",
+        "  grade = 'B'\n",
+        "\n",
+        "elif x>=83:\n",
+        "\n",
+        "  grade = 'B'\n",
+        "\n",
+        "elif x>=82:\n",
+        "\n",
+        "  grade = 'B-'\n",
+        "\n",
+        "elif x>=80:\n",
+        "\n",
+        "  grade = 'B-'\n",
+        "\n",
+        "elif x>=79:\n",
+        "\n",
+        "  grade = 'C+'\n",
+        "\n",
+        "elif x>=77:\n",
+        "\n",
+        "  grade = 'C+'\n",
+        "\n",
+        "elif x>=76:\n",
+        "\n",
+        "  grade = 'C'\n",
+        "\n",
+        "elif x>=73:\n",
+        "\n",
+        "  grade = 'C'\n",
+        "\n",
+        "elif x>=72:\n",
+        "\n",
+        "  grade = 'C-'\n",
+        "\n",
+        "elif x>=70:\n",
+        "\n",
+        "  grade = 'C-'\n",
+        "\n",
+        "elif x>=69:\n",
+        "\n",
+        "  grade = 'D+'\n",
+        "\n",
+        "elif x>=67:\n",
+        "\n",
+        "  grade = 'D+'\n",
+        "\n",
+        "elif x>=66:\n",
+        "\n",
+        "  grade = 'D'\n",
+        "\n",
+        "elif x>=63:\n",
+        "\n",
+        "  grade = 'D'\n",
+        "\n",
+        "elif x>=62:\n",
+        "\n",
+        "  grade = 'D-'\n",
+        "\n",
+        "elif x>=60:\n",
+        "\n",
+        "  grade = 'D-'\n",
+        "\n",
+        "elif x>=59:\n",
+        "\n",
+        "  grade = 'F'\n",
+        "\n",
+        "elif x>= 0:\n",
+        "\n",
+        "  grade = 'F'\n",
+        "\n",
+        "print(grade)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3s1xoNdQKv0U",
+        "outputId": "58d55ccc-b178-494e-8743-77e7ad029b4f"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "score: 100\n",
+            "A\n"
+          ]
+        }
+      ]
     }
   ]
 }
